Renamed chatraId to publicApiKey

--- a/templates/Chatra_Widget.twig
+++ b/templates/Chatra_Widget.twig
@@ -28,7 +28,7 @@
 
     window.ChatraSetup = {{ chatraSetup }}
 
-    ChatraID = '{{ chatraId }}';
+    ChatraID = '{{ publicApiKey }}';
     (function (d, w, c) {
         var n = d.getElementsByTagName('script')[0],
                 s = d.createElement('script');
